--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <title>
+        ASBL Amigo Negro Jose
+    </title>
+</head>
+<body>
+    <div class="logo">
+        <img src="img/vignette.png" alt="logo">
+    </div>
+    <header>
+        Amigo Negro Jose<br>
+        ASBL
+    </header>
+    <p class="don">Faire un don !</p>
+    <div>
+        <p>Créée en 1992, l’ASBL Amigo Negro José est active en <b>Bolivie</b> à Villachallacollo-Oruro.</p>
+        <p>La <i>casa de Niños Padre Jean-Marie Thomas</i> prend en charge enfants défavorisés, orphelins, abandonnés du Département Oruro. La casa inaugurée en 1998  est complète. Cent enfants de 3 mois à 17 ans en bénéficient. 3 repas par jour, <b>un concept familial sécurisant, accès à divers ateliers, suivi scolaire</b> sous la responsabilité de Hermana Silvia Sherwood. Un don modeste est bienvenu et intégralement versé à la casa.</p>
+        <p>L’asbl et les enfants vous remercient de votre intérêt et votre confiance.</p>
+    </div>
+    <div class="photo">
+        <img src="img/kids.jpg" alt="photo d'enfants"> 
+    </div>
+    <div class="contacts">
+        Contacts :<br>
+        Association Amigo Negro Jose<br>
+        rue du moulin 1 à 6692<br>
+        Petit-Thier<br>
+        Belgique
+        <p>amigonegro@gmail.com</p>
+    </div>
+    <div class="citation">
+        <q>Les Etats parties reconnaissent le droit de tout enfant à un niveau de vie suffisant pour permettre son développement physique, mental, spirituel, moral et social.</q><br>
+        <a href="https://www.ohchr.org/FR/ProfessionalInterest/Pages/CRC.aspx">Convention relative aux droits de l'enfant</a>
+    </div>
+    <footer>
+        D'autres associatons : <a href="https://www.liguedroitsenfant.be/">Ligue des droits de l'enfant</a>, <a href="https://vivre-ensemble.be/Assistance-a-l-Enfance">Action Vivre Ensemble</a>, <a href="https://enfantbleu.org/">L'Enfant Bleu</a>.
+    </footer>
+</body>
+</html>
